2010-01-11  NANRI Masaoki  <southly@gmail.com>

	* lisp : fix long-operation.
	long-operationの戻り値がprog1相当になっているのをprogn相当になるよ
	うに修正。
	xyzzy Part10 470

2009-12-26  NANRI Masaoki  <southly@gmail.com>

	* src : update zlib.
	zlibをバージョン1.2.3にアップデート。

2009-12-17  NANRI Masaoki  <southly@gmail.com>

	* lisp : modify tags-setup-buffer.
	XTAGSファイルを探す位置を少々変更。

	* lisp : modify edict-lookup-word.
	辞書を引く単語をカーソルの前方に変更。

	* lisp : modify start point in buffer-menu.
	buffer-menuを実行したときのカーソル位置を現在のバッファの位置に変更。

	* src : add key parameter ":show" to make-process.
	make-processにキーパラメータ :show を追加する。
	http://xyzzy.s53.xrea.com/wiki/index.php?patch%2F12

2009-12-16  NANRI Masaoki  <southly@gmail.com>

	* src : support IMR_DOCUMENTFEED.
	via http://fixdap.com/p/xyzzy/7376/
	以下で動作を確認。
	さいた　　　　　あたたかい
	布を　　　　　　牛乳
	花が　　　　　　春
	時間を　　　　　

	* src : fix set-buffer-modified-p.
	(set-buffer-modified-p nil) をした時に以前更新なし状態だった点が更
	新無し状態のままなのを修正。

	* src : fix inverse-cursor-line.
	(setq inverse-cursor-line t)
	の状態にすると行カーソルと折り返し線の交点が反転したまま残ってしま
	うのを修正。

2009-12-10  NANRI Masaoki  <southly@gmail.com>

	* src : fix format "~n@A".
	http://d.hatena.ne.jp/bowbow99/20090829/1251547986

2009-12-09  NANRI Masaoki  <southly@gmail.com>

	* src : add "*brackets-is-wildcard-character*" to history-variable.
	共通設定の「[...]はワイルドカード」の設定が保存されないので、対応す
	る変数をヒストリに追加。

	* src : fix dump hash-table.
	シンボルがキーのハッシュテーブルをダンプファイルに入れた場合、
	gethashで値がとれない問題があった。ただし、maphashで全要素を取得す
	ることはできた。
	---- $XYZZY/site-lisp/siteinit.l の内容
	(defparameter *hash* (make-hash-table))
	(dolist (i '((aaa . abab) (bbb . bcbc) (ccc . cdcd)))
	  (setf (gethash (car i) *hash*) (cdr i)))
	---- ダンプファイルをロードしたあとに評価
	(gethash 'aaa *hash*)
	=>nil ; 本来は abab
	=>nil ;        t

	(maphash #'(lambda (key val) (format t "~S: ~S~%" key val)) *hash*)
	aaa: abab
	bbb: bcbc
	ccc: cdcd
	=>nil
	----
	シンボルのハッシュ値はオブジェクトのアドレスを元に計算しているが、
	ダンプファイル作成時とダンプファイルロード後ではシンボルオブジェク
	トのアドレスが異なり、同一のハッシュ値にならないのが原因。

	ダンプファイルをロードしたあとにrehashするように修正。

	* lisp : fix defpackage.